--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>za.co.discovery</groupId>
     <artifactId>bank</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>Bank</name>
     <description>Discovery Bank</description>
 
